<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <TextView
        android:id="@+id/txvNome"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nome"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxNome"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNome" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="230dp"
        android:layout_height="184dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxNome">

        <RadioButton
            android:id="@+id/rdEmpregado"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioEmpregado" />

        <RadioButton
            android:id="@+id/rdDesempregado"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioDesempregado" />

        <RadioButton
            android:id="@+id/rdDream"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioOcupacao" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="94dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.842">

        <Button
            android:id="@+id/btnDica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDica" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limparCadastro"
            android:text="@string/btnLimpar" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>